# ChessEngine

./: CMakeLists.txt
config/: ChessInitData.json
include/: Board.hpp  DataStructures.hpp  Piece.hpp
src/: Board.cpp  DataStructures.cpp  Piece.cpp  main.cpp
